src/prompts/components/Modal.scss
@import "~@nti/style-common";

.modal-mask {
	@include touch-scroll;
	overflow: {
		x: hidden;
		y: auto;
	}

	position: fixed;
	top: 0;
	left: 0;
	bottom: 0;
	right: 0;
	background: rgba(0, 0, 0, 0.7);
	perspective: 300px;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;

	body.inline-dialog-open & {
		z-index: 1;
	}

	body > .modal + .modal & {
		background: none;
	}

	&.tall {
		justify-content: flex-start;
	}

	.modal-content {
		animation-delay: 0.15s;
		flex: 0 0 auto;

		& > * {
			margin: 0 auto;
			position: relative;

			@include covered-modal {
				&::after {
					content: '';
					position: absolute;
					top: 0;
					bottom: 0;
					left: 0;
					right: 0;
					background: rgba(255, 255, 255, 0.5);
				}
			}
		}
	}

	&.safari-fix {
		position: absolute !important;
		bottom: auto;

		.modal-content {
			animation: none;
		}
	}

	.icon-close {
		position: absolute;
		width: 16px;
		height: 16px;
		background-image: url(./assets/close.png);
		background-repeat: no-repeat;
		background-size: cover;
		right: 1rem;
		top: 1rem;
		cursor: pointer;
	}

	dialog {
		display: block;
		position: static;
		left: auto;
		right: auto;
		width: auto;
		height: auto;
		color: inherit;
		margin: initial;
		border-width: initial;
		border-style: initial;
		border-color: initial;
		border-image: initial;
		padding: initial;
		background: none;
	}
}

.modal-mask-appear,
.modal-mask-enter {
	opacity: 0.01;

	html:not(.is-ie) & {
		transition: opacity 300ms ease-out; //make this transition 10ms longer to let the .modal-content animation playout
	}
}

.modal-mask-appear.modal-mask-appear-active,
.modal-mask-enter.modal-mask-enter-active {
	opacity: 1;

	.modal-content {
		animation: modal-content 250ms ease both;
	}
}

.modal-mask-exit {
	opacity: 1;
	transition: opacity 250ms ease-out;
}

.modal-mask-exit.modal-mask-exit-active {
	opacity: 0.01;
}

@keyframes modal-content {
	0% {
		transform: translate3d(0, 0, -30px);
		opacity: 0;
	}

	100% {
		transform: translate3d(0, 0, 0);
		opacity: 1;
	}
}

